--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
         properties.load(project.rootProject.file('local.properties').newDataInputStream())
         buildConfigField "String", "API_KEY", "\"${properties.getProperty('API_KEY')}\""
 
+        buildConfigField "String", "BASE_URL", "\"${properties.getProperty('BASE_URL')}\""
     }
 
     buildTypes {
@@ -83,6 +84,9 @@ dependencies {
     // Room
     implementation "androidx.room:room-runtime:2.5.0"
     kapt "androidx.room:room-compiler:2.5.0"
+
+    //Paging Library
+    implementation("androidx.paging:paging-runtime:3.1.1")
 
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.5.0"
