--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.5.5"
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
+
+    // DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
